# homeworks-for-studies

./: Readme.md
android-czytnik_rss/: Readme.md
asm_x86_64-sequence/: Readme.md  sequence.asm
cpp-sikradio/: CMakeLists.txt  Makefile  Readme.md  default_values.hpp  file_descriptor.cpp  file_descriptor.hpp  indeks.hpp  memory_chunk.cpp  memory_chunk.hpp  optimizations.hpp  recv.sh  send.sh  sikradio_receiver.cpp  sikradio_sender.cpp  spinlock_mutex.cpp  spinlock_mutex.hpp  telnet.hpp  utility.cpp  utility.hpp
hadoop_scala-minimal_algorithm/: Readme.md
hadoop_scala-minimal_algorithm/ansible/: hadoop.yaml  inventory
hadoop_scala-minimal_algorithm/sample_data/: gen2D.py  gen3D.py  solver.py
hadoop_scala-minimal_algorithm/scala_code/: build.sbt
hadoop_scala-minimal_algorithm/scripts/: ansible.sh  hadoop.sh  paths.sh  run-solution.sh  spark-shell.sh  spark-submit.sh
haskell_llvm-latte_compiler/: Makefile  Readme.md  cabal.project
haskell_llvm-latte_compiler/docs/: DocLatte.html  DocLatte.man
haskell_llvm-latte_compiler/examples/: simple_program.lat
haskell_llvm-latte_compiler/lib/: runtime.c  runtime.ll
haskell_llvm-latte_compiler/src/: AbsWithTypes.hs  Backend.hs  CodeInput.hs  Compiler.hs  ErrorMsg.hs  Frontend.hs  Latte.cf  LineNr.hs  Main.hs  ParserGlue.hs  Paths.hs  PrintAbsT.hs  Utils.hs
haskell_llvm-latte_compiler/src_generated/: LexLatte.hs  LexLatte.x  ParLatte.hs
java-dziki_zachod/: Readme.md
java-dziki_zachod/src/: Main.java
javafx-farby/: Readme.md
minix-SJF_scheduler/: Readme.md  sjf.patch
ocaml-arytmetyka/: Readme.md  arytmetyka.ml
prolog-imiennicy/: Readme.md  code.pl
rust_sql-pizzeria/: Readme.md
(+101 files in other folders)
